--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -4,3 +4,13 @@
     margin: 0;
     padding: 0;
 }
+
+.cover__link::before {
+    position:absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    content: '';
+    cursor: url(../../../images/Pointer.svg), auto;
+}
