--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -8,6 +8,7 @@
     line-height: 18px;
     margin: 0 18px 0 0;
     padding: 0;
+    cursor: url(../../../images/Pointer.svg), auto;
 }
 
 @media screen and (max-width:730px) {
