--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,6 +5,7 @@
     font-weight: 400;
     font-size:24px;
     line-height:1.2;
+    cursor: url(../../../images/Pointer.svg), auto;
 }
 
 @media screen and (max-width:450px) {
