--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -7,4 +7,5 @@
     line-height: 22px;
     text-decoration-line: underline;
     color: white;
+    cursor: url(../../../images/Pointer.svg), auto;
 }
