--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,16 +1,40 @@
 .cover__link {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
     text-decoration: none;
     color: white;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
+    background-image: url(../../../images/cover-trains.jpg);
+    background-size: cover;
+    max-width: calc( 1184 / 1280 * 100vw);
+    width: 100vw;
+    height: 62.5vw;
+    cursor: pointer;
 }
 
 .cover__link::before {
-    position:absolute;
+    background-color: #2A2C2F;
+    opacity:0.3;
+    position: absolute;
     top: 0;
-    right: 0;
-    bottom: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
     content: '';
-    cursor: url(../../../images/Pointer.svg), auto;
+    transition: 0.4s;
+} 
+
+.cover__link:hover::before {
+    opacity: 0.8;
+}
+
+@media screen and (max-width:1024px) {
+    .cover__link {
+        max-width: calc(100vw - (100vw - 100%));
+    }
 }
