--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
     margin: 32px 0 0 0;
     padding: 0;
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -25,5 +24,6 @@
         margin-top: 16px;
         font-size: 14px;
         line-height: 16px;
+        max-width: 288px;
     }
 }
