--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,13 +1,13 @@
 .cover__title {
     margin:0;
     padding: 0;
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
     text-align: center;
     position: relative;
+    max-width: 560px;
 }
 
 @media screen and (max-width:730px) {
@@ -21,5 +21,6 @@
     .cover__title {
         font-size: 32px;
         line-height: 35px;
+        max-width: 288px;
     }
 }
