--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,14 +1,13 @@
 .footer__link {
     text-decoration: none;
     color: white;
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 18px;
     margin: 0 18px 0 0;
     padding: 0;
-    cursor: url(../../../images/Pointer.svg), auto;
+    cursor: pointer;
 }
 
 @media screen and (max-width:730px) {
