--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -28,7 +28,7 @@
 
 @media screen and (max-width: 500px) {
     .place__image {
-        width: 100vw;
-        height: 100vw;
+        width: calc(100vw - (100vw - 100%));
+        height: calc(100vw - (100vw - 100%));
     }
 }
