--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,11 +1,10 @@
 .place__link {
     margin: 12px 0 0 0;
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     text-decoration-line: underline;
     color: white;
-    cursor: url(../../../images/Pointer.svg), auto;
+    cursor: pointer;
 }
