--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,28 +1,27 @@
-.place__text {
+.place__paragraph {
     margin: 0;
     padding: 0;
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 163%;
 }
 
-.place__text:nth-child(2) {
+.place__paragraph:nth-child(2) {
     margin-top: 26px;
 }
 
 @media screen and (max-width:768px) {
-    .place__text {
+    .place__paragraph {
         font-size: 16px;
     }
-    .place__text:nth-child(2) {
+    .place__paragraph:nth-child(2) {
         margin-top: 25px;
     }
 }
 
 @media screen and (max-width:500px) {
-    .place__text {
+    .place__paragraph {
         width: calc(288 / 320 * 100vw);
     }
 }
