--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -14,6 +14,6 @@
 @media screen and (max-width:500px) {
     .places {
         margin-top: 64px;
-        max-width: 100vw;
+        max-width: calc(100vw - (100vw - 100%));
     }
 }
