--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -8,6 +8,11 @@
     margin: 0 18px 0 0;
     padding: 0;
     cursor: pointer;
+    transition: 0.4s;
+}
+
+.footer__link:hover {
+    opacity: 0.8;
 }
 
 @media screen and (max-width:730px) {
