--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,10 +6,15 @@
     font-size:24px;
     line-height:1.2;
     cursor: pointer;
+    transition: 0.4s;
 }
 
 .header__lang-link:nth-child(2) {
     margin-left: 18px;
+}
+
+.header__lang-link:hover {
+    opacity: 0.8;
 }
 
 @media screen and (max-width:450px) {
