--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,4 +5,11 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 163%;
+    max-width: 690px;
+}
+
+@media screen and (max-width:768px) {
+    .intro__text {
+        max-width: 720px;
+    }
 }
