--- a/blocks/lead/__figure/lead__figure.css
+++ b/blocks/lead/__figure/lead__figure.css
@@ -5,7 +5,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 64px;
+    margin: 64px 0 0 0;
+    padding: 0;
 }
 
 @media screen and (max-width:1024px) {
