--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -7,4 +7,9 @@
     text-decoration-line: underline;
     color: white;
     cursor: pointer;
+    transition: 0.4s;
+}
+
+.place__link:hover {
+    opacity: 0.8;
 }
