--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,6 +1,7 @@
 .place__url-heading {
     margin: 0;
     padding: 0;
+    text-transform: uppercase;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
