--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -11,6 +11,7 @@
 
 @media screen and (max-width:1024px) {
     .place__title {
+        width: calc(440 / 1024 * 100vw);
         font-size: calc( 72 / 1024 * 100vw);
         line-height: calc( 76 / 1024 * 100vw);
     }
