--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -22,6 +22,7 @@
     .place__title {
         font-size: 42px;
         line-height: 46px;
+        max-width: 340px;
     }
 }
 
@@ -42,6 +43,7 @@
 
 @media screen and (max-width:320px) {
     .place__title {
+        width: 288px;
         font-size: 32px;
         line-height: 35px;
         margin-left: 16px;
